# twi-rs

./: Cargo.toml
src/: app.rs  event.rs  handler.rs  irc_handler.rs  join_input.rs  key_handler.rs  main.rs  messagebox.rs  tui.rs  ui.rs
src/components/: input.rs  join.rs  messages.rs  mod.rs  popup.rs  tabs.rs
src/twitch/: client_stream.rs  irc_client.rs  mod.rs
