[package]
name = "twi-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
futures-timer = "3.0.3"
irc = "1.0.0"
tokio = { version = "1.39.2", features = ["full"] }
tokio-util = "0.7.11"
dotenv = "0.15.0"
ratatui = "0.27.0"
crossterm = { version = "0.27.0", features = ["event-stream"] }
textwrap = "0.16.1"
